fix: Layout alignment

--- a/index.css
+++ b/index.css
@@ -3,15 +3,16 @@ html * {
   font-family: 'Roboto', sans-serif;
 }
 /* universal */
-h1 {
+h2 {
   font-size: 34px;
+  color: #273272;
 }
 p {
   font-size: 20px;
+  font-weight: 400;
+  text-align: justify;
 }
-.section-heading {
-  color: black;
-}
+
 ul {
   margin: 0px;
   font-family: 'Roboto', sans-serif;
@@ -34,8 +35,10 @@ h2,
 h3,
 h4,
 h5,
-p,
-a {
+p {
+  font-family: 'Roboto', sans-serif;
+}
+a  {
   color: #273272;
   font-family: 'Roboto', sans-serif;
 }
@@ -101,12 +104,7 @@ a {
 /* .section-content {
   max-width: 75%;
 } */
-.section-content .section-content-heading {
-  color: black;
-}
-.section-content-paragraph {
-  color: black;
-}
+
 .section-content-image {
   max-width: 100%;
 }
